# apps/panel/src/api/index.ts
@@ -9,4 +9,5 @@ export * from './locations/locations';
 export * from './members/members';
 export * from './organizations/organizations';
 export * from './projects/projects';
+export * from './usage/usage';
 export * from './users/users';
